# StrawberryCleaner

./: CMakeLists.txt  main.cpp
