include(FindPkgConfig)
cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(musica_nov LANGUAGES CXX)
add_executable(${PROJECT_NAME} "main.cpp")
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
find_package(PkgConfig REQUIRED)
pkg_check_modules(taglib REQUIRED IMPORTED_TARGET taglib>=1.11)
find_package(ZLIB REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE PkgConfig::taglib ZLIB::ZLIB)
